# fit-pcsaft

./: .gitignore  CLAUDE.md  README.md  aromas_dens_visc(2).xlsx  diag_01_map_failures.py  pylock.toml  pyproject.toml  scratch_pressure_lle.py  thiswork2026_pure.json
.claude/: protect_data_hook.py
benchmarks/: README.md  dashboard.py  run_test.py  test_pure.json
benchmarks/vle/: 2m2boh_water.csv
examples/: 01_propane.py  02_acetone.py  03_ethanol.py  04_carbon_dioxide.py  README.md  diag_01_api_inspect.py  diag_02_tpflash_map.py  diag_03_lle_diagram.py  diag_04_ucst_kij.py  diag_05_pd_vs_tpflash.py  diag_06_composition_quality.py  diag_07_pd_lle_optimal.py  diag_08_phase_labeling.py
examples/binary/: 01_vle_ethanol_water.py  02_lle_water_octanol.py  02_water_toluene_lle.py  03_ccl4_2-undecanone_sle.py  03_water_hexanol_lle.py  04_henry.py  04_henry_2m3b2oh_water.py  04_water_octanol_alt_lle.py  04_water_octanol_lle.py  05_mibk_water_vle_lle.py  05_vle_lle_mibk_water.py  06_mibk_water_all_water_models.py  07_2m2boh_water_vlle.py  07_viscosity_hexane_heptane.py  08_hexanol_water_ninoamezquita.py  09_hexane_heptane_viscosity.py
examples/binary_test/: dashboard.html  dashboard.py  run_test.py
examples/pure/: 01_propane.py  02_acetone.py  03_ethanol.py  04_carbon_dioxide.py  05_1-decanol.py  06_camphor.py  07_eugenol.py  07_eugenol_diff_evolution.py  08_toluene.py  09_hexane_viscosity.py  09_viscosity_hexane.py
src/fit_pcsaft/: 2m2boh_water_vlle.csv  __init__.py  _csv.py  _fit_utils.py  _metrics.py  _plot.py  _types.py  fit.py  result.py
tests/: test_metrics.py
(+75 files in other folders)
