[project]
name = "fit-pcsaft"
version = "0.1.0"
description = "A Python package for fitting the PC-SAFT equation of state to experimental data."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
authors = [{ name = "Maximilian Fleckenstein", email = "maximilianfv@uc.cl" }]
dependencies = [
  "feos==0.9.3",
  "matplotlib>=3.10.8",
  "polars>=1.38.1",
  "pubchempy==1.0.5",
  "scipy==1.17.0",
  "seaborn>=0.13.2",
  "si-units>=0.11.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
